<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginTop="180dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#ffd700"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:text="@string/login_username"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_login_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:hint="@string/login_name_hint"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <TextView
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:text="@string/login_password"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_login_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:hint="@string/login_pwd_hint"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="36dp"
            android:background="@drawable/bg_login_login"
            android:text="@string/login_login" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_login_register"
            android:text="@string/login_register" />

    </LinearLayout>

</LinearLayout>