<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="16dp"
            android:layout_height="match_parent"
            android:src="@drawable/back"
            android:layout_gravity="center_vertical"
            android:paddingStart="6dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingVertical="6dp"
            android:text="@string/add_clazz"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:text="@string/clazz_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:hint="@string/clazz_name_hint"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:text="@string/clazz_startTime"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:hint="@string/clazz_startTime_hint"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:text="@string/clazz_endTime"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:hint="@string/clazz_endTime_hint"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_add"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_login_register"
            android:text="@string/add_clazz" />

    </LinearLayout>

</LinearLayout>